<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".Ciudades">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/color_ciudad" />

    <Button
        android:id="@+id/btGye"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton"
        android:textColor="@android:color/holo_orange_dark" />

    <Button
        android:id="@+id/btEst"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton2"
        android:textColor="@android:color/holo_orange_dark" />


</LinearLayout>